[package]
name = "blip_buf"
version = "0.1.0"
authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
license = "MIT"
repository = "https://github.com/mvdnes/blip_buf-rs"
description = """
Blip_buf is a small waveform synthesis library meant for use in classic video game sound chip emulation.
Bindings to blip_buf (https://code.google.com/p/blip-buf/)
"""

[dependencies]
blip_buf-sys = { path = "blip_buf-sys", version = "0.1" }
libc = "0.1"
