[package]
name = "blip_buf-sys"
version = "0.1.4"
authors = ["Mathijs van de Nes <git@mathijs.vd-nes.nl>"]
build = "build.rs"
license = "MIT"
repository = "https://github.com/mvdnes/blip_buf-rs"
description = """
FFI bindings to blip_buf.c
"""

[lib]
name = "blip_buf_sys"
path = "lib.rs"

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
